# Qt-Advanced-Docking-System

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/simple/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  form.ui  formwithgl.cpp  formwithgl.h  glwidget.cpp  glwidget.h  glwindow.h  main.cpp  simple.pro
src/: CMakeLists.txt  DockAreaTitleBar.cpp  DockAreaWidget.cpp  DockAreaWidget.h  DockContainerWidget.cpp  DockFocusController.cpp  DockManager.cpp  DockManager.h  DockOverlay.cpp  DockSplitter.cpp  DockWidget.cpp  DockWidgetTab.cpp  FloatingDockContainer.cpp  FloatingDockContainer.h  FloatingDragPreview.cpp  ads_globals.cpp  ads_globals.h
